@@ -45,6 +45,15 @@ with Matlab. It may also be used as a batch-oriented language.</p>
 <h2>Current News</h2>
 
 <dl>
+<dt>December 5, 2007</dt>
+<dd>Version 2.9.18 is now available for ftp and is the new
+"testing" (also "recommended") version.  As noted on the download
+page, 2.9.18 is a pre-release version of Octave 3.0.  It is
+significantly different from Octave 2.1.x, particularly with regard to
+graphics, path handling, and built-in variables.  Please read the
+<a href="NEWS-3.html">NEWS</a> file.
+<a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2007-December/005913.html"
+class="mailthread">[Mailing List Thread]</a></dd>
 <dt>November 10, 2007</dt>
 <dd>Version 2.9.17 is now available for ftp and is the new
 "testing" (also "recommended") version.  As noted on the download
